--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -6,6 +6,10 @@
   <title>Administração - Centro de Compras</title>
   <link rel="stylesheet" href="/style.css">
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <style>
+    .form-section { background: white; padding: 20px; border-radius: 8px; margin-bottom: 20px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+    .login-section { background: white; padding: 20px; border-radius: 8px; margin-bottom: 20px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+  </style>
 </head>
 <body>
   <header>
@@ -14,7 +18,18 @@
   </header>
   <main>
     <div class="container admin-container">
-      <section class="form-section">
+      <section class="login-section" id="login-section">
+        <h2>Login (Admin)</h2>
+        <form id="login-form">
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required>
+          <label for="senha">Senha:</label>
+          <input type="password" id="senha" name="senha" required>
+          <button type="submit">Entrar</button>
+          <p id="login-feedback"></p>
+        </form>
+      </section>
+      <section class="form-section" id="admin-form" style="display: none;">
         <h2>Adicionar/Editar Produto</h2>
         <form id="produto-form">
           <input type="hidden" id="produto-id" name="id">
@@ -37,8 +52,8 @@
             <option value="esportes">Esportes</option>
             <option value="livros">Livros</option>
             <option value="infantil">Infantil</option>
-            <option value="celulares">Celulares</option>
-            <option value="eletrodomesticos">Eletrodomésticos</option>
+            <option value="Celulares">Celulares</option>
+            <option value="Eletrodomésticos">Eletrodomésticos</option>
             <option value="pet">Pet</option>
             <option value="jardinagem">Jardinagem</option>
             <option value="automotivo">Automotivo</option>
@@ -69,8 +84,65 @@
   </main>
   <script>
     const API_BASE_URL = 'https://minha-api-produtos.onrender.com';
+    let isAdmin = false;
 
     document.addEventListener('DOMContentLoaded', () => {
+      // Verificar autenticação
+      const token = localStorage.getItem('token');
+      if (token) {
+        fetch(`${API_BASE_URL}/api/verify-token`, {
+          headers: { 'Authorization': `Bearer ${token}` }
+        })
+        .then(response => response.json())
+        .then(data => {
+          if (data.is_admin) {
+            isAdmin = true;
+            document.getElementById('admin-form').style.display = 'block';
+            document.getElementById('login-section').style.display = 'none';
+            carregarProdutos();
+          } else {
+            localStorage.removeItem('token');
+          }
+        })
+        .catch(error => {
+          console.error('Erro ao verificar token:', error);
+          localStorage.removeItem('token');
+        });
+      }
+
+      // Manipular login
+      const loginForm = document.getElementById('login-form');
+      loginForm.addEventListener('submit', async (e) => {
+        e.preventDefault();
+        const email = document.getElementById('email').value;
+        const senha = document.getElementById('senha').value;
+        try {
+          const response = await fetch(`${API_BASE_URL}/api/login`, {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ email, senha })
+          });
+          const result = await response.json();
+          const feedback = document.getElementById('login-feedback');
+          if (response.ok && result.is_admin) {
+            localStorage.setItem('token', result.token);
+            isAdmin = true;
+            document.getElementById('admin-form').style.display = 'block';
+            document.getElementById('login-section').style.display = 'none';
+            feedback.textContent = 'Login realizado com sucesso!';
+            feedback.style.color = 'green';
+            carregarProdutos();
+          } else {
+            feedback.textContent = result.message || 'Credenciais inválidas';
+            feedback.style.color = 'red';
+          }
+        } catch (error) {
+          console.error('Erro ao fazer login:', error);
+          document.getElementById('login-feedback').textContent = 'Erro ao conectar com a API';
+          document.getElementById('login-feedback').style.color = 'red';
+        }
+      });
+
       // Manipulador de erro para imagens
       document.querySelectorAll('img').forEach(img => {
         img.onerror = () => {
@@ -100,7 +172,9 @@
         const produtosLista = document.getElementById('produtos-lista');
         produtosLista.innerHTML = '<p>Carregando...</p>';
         try {
-          const response = await fetch(`${API_BASE_URL}/api/produtos`);
+          const response = await fetch(`${API_BASE_URL}/api/produtos`, {
+            headers: { 'Authorization': `Bearer ${localStorage.getItem('token')}` }
+          });
           if (!response.ok) throw new Error(`Erro HTTP: ${response.status}`);
           const { data } = await response.json();
           produtosLista.innerHTML = '';
@@ -128,7 +202,9 @@
       // Editar produto
       window.editarProduto = async function(id) {
         try {
-          const response = await fetch(`${API_BASE_URL}/api/produtos?id=${id}`);
+          const response = await fetch(`${API_BASE_URL}/api/produtos?id=${id}`, {
+            headers: { 'Authorization': `Bearer ${localStorage.getItem('token')}` }
+          });
           const { data } = await response.json();
           const produto = data.find(p => p.id === id);
           if (!produto) throw new Error('Produto não encontrado');
@@ -154,7 +230,10 @@
       window.excluirProduto = async function(id) {
         if (!confirm('Tem certeza que deseja excluir este produto?')) return;
         try {
-          const response = await fetch(`${API_BASE_URL}/api/produtos/${id}`, { method: 'DELETE' });
+          const response = await fetch(`${API_BASE_URL}/api/produtos/${id}`, {
+            method: 'DELETE',
+            headers: { 'Authorization': `Bearer ${localStorage.getItem('token')}` }
+          });
           const result = await response.json();
           if (response.ok) {
             document.getElementById('feedback').textContent = result.message || 'Produto excluído com sucesso';
@@ -190,7 +269,11 @@
         const method = id ? 'PUT' : 'POST';
 
         try {
-          const response = await fetch(url, { method, body: formData });
+          const response = await fetch(url, {
+            method,
+            headers: { 'Authorization': `Bearer ${localStorage.getItem('token')}` },
+            body: formData
+          });
           const result = await response.json();
           const feedback = document.getElementById('feedback');
           if (response.ok) {
@@ -212,9 +295,6 @@
           document.getElementById('feedback').style.color = 'red';
         }
       });
-
-      // Carregar produtos iniciais
-      carregarProdutos();
     });
   </script>
 </body>
